# redflix-rs

./: .gitignore  index.html
backend/redflix/: Cargo.toml
backend/redflix/src/: main.rs  routes.rs
backend/redflix/src/entities/: forms.rs  user.rs
backend/redflix/src/plugins/: postgresql_db.rs  redis_db.rs  session_handler.rs
backend/redflix/templates/: browse.hbs  landing_page.hbs
cdn/: index.html
frontend/: browse.hbs
frontend/css/: style.css
frontend/js/: script.js
