[package]
name = "goflix"
version = "0.1.0"
authors = ["rogovskyyy <bart.rogovsky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
redis = "0.19.0"
tokio = { version = "1.1.1", features = ["full"] }
tokio-postgres = "0.7.0"
postgres_query = "0.3.3"
postgres_query_macro = "0.3.1"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "handlebars_templates", "tera_templates", "serve"]